--- a/manifest.json
+++ b/manifest.json
@@ -6,16 +6,16 @@
   "orientation": "any",
   "scope": "/",
   "short_name": "buscador-calorias",
-  "start_url": "https://buscador-de-calorias.vercel.app/",
+  "start_url": "/",
   "theme_color": "#4bc76c",
   "icons": [
     {
-      "src": "img/calories.png",
+      "src": "icons/calories.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "img/cropped.png",
+      "src": "icons/cropped.png",
       "type": "image/png",
       "sizes": "192x192"
     }
