--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
       "sizes": "512x512"
     },
     {
-      "src": "icons/cropped.png",
+      "src": "icons/cropped.jpg",
       "type": "image/png",
       "sizes": "192x192"
     }
