--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     },
     {
       "src": "icons/cropped.jpg",
-      "type": "image/png",
+      "type": "image/jpg",
       "sizes": "192x192"
     }
   ],
